# rust_wasm_dodrio_templating

./: Cargo.toml  Makefile.toml  README.md
.github/: rust.yml
docs/: index.html  search-index.js  settings.html  source-files.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/rust_wasm_dodrio_templating/: all.html  index.html  sidebar-items.js
docs/rust_wasm_dodrio_templating/html_template_mod/: enum.HtmlOrSvg.html  fn.decode_5_xml_control_characters.html  fn.empty_div.html  index.html  sidebar-items.js  trait.HtmlTemplating.html
docs/src/rust_wasm_dodrio_templating/: html_template_mod.rs.html  lib.rs.html
src/: html_template_mod.rs  lib.rs
